# cli-notifier

./: .gitignore  Cargo.toml  README.md  config.toml  shell.nix  webhook_server.py
android/: settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/androidTest/java/com/example/webhooknotifier/: ExampleInstrumentedTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/example/webhooknotifier/: MainActivity.kt
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/values-night/: themes.xml
android/app/src/test/java/com/example/webhooknotifier/: ExampleUnitTest.kt
android/gradle/: libs.versions.toml
android/gradle/wrapper/: gradle-wrapper.properties
src/: config.rs  main.rs
src/notifier/: desktop.rs  manager.rs  mod.rs  webhook.rs
