[package]
name = "cli-notifier"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5"
log = "0.4"
env_logger = "0.10"
async-trait = "0.1"
dirs = "5"
notify-rust = "4.11"
reqwest = { version = "0.12.8", features = ["json"] }